Mon Oct 11 23:35:19 1999  Jeffrey A Law  (law@cygnus.com)

	Tue Aug 17 22:06:11 1999  Jan Hubicka  <hubicka@freesoft.cz>
	* haifa-sched.c (insn_unit): Fix typo on out of range test.
	* sched.c (insn_unit): Likewise.

Sun Oct 10 20:58:27 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.md (scc patterns): Disable most SImode variants if
	TARGET_POWERPC64.
	* rs6000.c (expand_block_move): Fix gen_movsi typos.

	Thu Oct  7 23:06:50 1999  Richard Henderson  <rth@cygnus.com>
	* rs6000.md (fix_truncdfsi2_internal+1): Emit a clobber
	before the fctiwz insn.

	Thu Oct  7 00:36:17 1999  Diego Novillo  <dnovillo@cygnus.com>
	* config/rs6000/rs6000.c (secondary_reload_class): For TARGET_ELF
	make sure that HIGH instructions are copied into BASE_REGS.
	
Thu Sep 30 05:40:34 1999  Richard Earnshaw <rearnsha@arm.com>

	* c-lang.c (finish_file case ndef ASM_OUTPUT_{CON,DE}STRUCTOR): 
	Correctly build argument list to constructor and destructor functions.

Wed Sep 22 17:55:31 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (expand_block_move): DImode loads and stores require
	word-aligned displacements.  Increment address registers with
	adddi3 on 64-bit platform.  Use TARGET_POWERPC64 not TARGET_64BIT.

Wed Sep 22 07:07:44 1999  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* config/i386/sol2.h (PREFERRED_DEBUGGING_TYPE): Use stabs.
	(ASM_SPEC): Moved from sol2dbg.h.  Added work-around for gas.
	* config/i386/sol2dbg.h: Removed.
	* config/i386/sol2gas.h: New file, to enable gas work-around.
	* configure.in: Use i386/sol2gas.h on Solaris/x86 --with-gas.
	Don't use sol2dbg.h.
	* configure: Rebuilt.

Wed Sep 15 21:20:38 1999  Mark Mitchell  <mark@codesourcery.com>

	* c-typeck.c (qualify_type): Merge qualifiers from both types.

Wed Sep 15 10:07:27 1999  Scott Bambrough <scottb@netwinder.org>
 
	* config/arm/linux-elf.h: define NO_IMPLICIT_EXTERN_C

Tue Sep  7 16:50:59 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.h (ASM_FILE_START): Specify complete filename, including